--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.10.6",
     "pinia": "^2.1.3",
+    "vee-validate": "^4.10.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
@@ -24,7 +26,7 @@
     "@vue/test-utils": "^2.3.2",
     "autoprefixer": "^10.4.14",
     "cypress": "^12.14.0",
-    "eslint": "^8.39.0",
+    "eslint": "8.22.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-vue": "^9.11.0",
     "jsdom": "^22.1.0",
