--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vee-validate/rules": "^4.10.6",
+    "firebase": "^8.10.1",
     "pinia": "^2.1.3",
     "vee-validate": "^4.10.6",
     "vue": "^3.3.4",
